// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render snapshots — canonical Detail Mode states (#31) > Detail with description, no sessions, no other tasks (#47) 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">With desc</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#8</span>
    <span class="status">open</span>
    
  </div>
  <div class="detail-branch detail-branch-empty">🌿 no worktree yet</div>
  
  <div class="detail-description"><p>A short description.</p></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="detail-sessions-empty">No sessions.</div></div>
  </div>
</div></body></html>"
`;

exports[`render snapshots — canonical Detail Mode states (#31) > Detail with externally-closed indicator 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">Closed task</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#1</span>
    <span class="status">closed</span>
    
  </div>
  <div class="detail-branch">🌿 feat-zz</div>
  <div class="detail-closed-indicator">Externally closed — 2 sessions still running</div>
  <div class="detail-description"></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="session-row session-row--detail" data-action="focusSession" data-session-id="10">
  <span class="kind">⌨️</span>
  <span class="label">session-10</span>
  <span class="glyph">●</span>
  <button class="icon-btn stop" title="Stop" data-action="stopSession" data-session-id="10">⏹</button>
  <button class="icon-btn done" title="Mark Done" data-action="markSessionDone" data-session-id="10">✓</button>
  <button class="icon-btn overflow" title="More" data-action="sessionOverflow" data-session-id="10">⋯</button>
</div><div class="session-row session-row--detail" data-action="focusSession" data-session-id="11">
  <span class="kind">⌨️</span>
  <span class="label">session-11</span>
  <span class="glyph">●</span>
  <button class="icon-btn stop" title="Stop" data-action="stopSession" data-session-id="11">⏹</button>
  <button class="icon-btn done" title="Mark Done" data-action="markSessionDone" data-session-id="11">✓</button>
  <button class="icon-btn overflow" title="More" data-action="sessionOverflow" data-session-id="11">⋯</button>
</div></div>
  </div>
</div></body></html>"
`;

exports[`render snapshots — canonical Detail Mode states (#31) > Detail with footer mini-cards: one running, one idle (#47) 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">Focus</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#1</span>
    <span class="status">open</span>
    
  </div>
  <div class="detail-branch detail-branch-empty">🌿 no worktree yet</div>
  
  <div class="detail-description"></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="detail-sessions-empty">No sessions.</div></div>
  </div>
</div><div class="detail-footer"><ul class="detail-footer-list"><li class="card card--mini" data-action="switchDetailTo" data-task-id="2" title="Sibling running">
  <span class="edge-bar edge-bar--soft" aria-hidden="true"></span>
  <span class="title">Sibling running</span>
  <span class="id">#2</span>
</li><li class="card card--mini" data-action="switchDetailTo" data-task-id="3" title="Sibling idle">
  
  <span class="title">Sibling idle</span>
  <span class="id">#3</span>
</li></ul></div></body></html>"
`;

exports[`render snapshots — canonical Detail Mode states (#31) > Detail with no sessions 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">Lonely task</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#7</span>
    <span class="status">open</span>
    
  </div>
  <div class="detail-branch detail-branch-empty">🌿 no worktree yet</div>
  
  <div class="detail-description"></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="detail-sessions-empty">No sessions.</div></div>
  </div>
</div></body></html>"
`;

exports[`render snapshots — canonical Detail Mode states (#31) > Detail with populated description + mixed sessions + footer 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">Main task</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  <div class="detail-breadcrumb">↳ #10</div>
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#42</span>
    <span class="status">open</span>
    <span class="assignee">alice</span>
  </div>
  <div class="detail-branch">🌿 feature-main</div>
  
  <div class="detail-description"><p>Hello <strong>world</strong></p></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="session-row session-row--detail" data-action="focusSession" data-session-id="10">
  <span class="kind">⌨️</span>
  <span class="label">impl</span>
  <span class="glyph">⏳</span>
  <button class="icon-btn stop" title="Stop" data-action="stopSession" data-session-id="10">⏹</button>
  <button class="icon-btn done" title="Mark Done" data-action="markSessionDone" data-session-id="10">✓</button>
  <button class="icon-btn overflow" title="More" data-action="sessionOverflow" data-session-id="10">⋯</button>
</div><div class="session-row session-row--detail" data-action="focusSession" data-session-id="11">
  <span class="kind">⌨️</span>
  <span class="label">done</span>
  <span class="glyph">✔️</span>
  <button class="icon-btn stop" title="Stop" data-action="stopSession" data-session-id="11">⏹</button>
  <button class="icon-btn done" title="Mark Done" data-action="markSessionDone" data-session-id="11">✓</button>
  <button class="icon-btn overflow" title="More" data-action="sessionOverflow" data-session-id="11">⋯</button>
</div></div>
  </div>
</div><div class="detail-footer"><ul class="detail-footer-list"><li class="card card--mini" data-action="switchDetailTo" data-task-id="2" title="Other A">
  
  <span class="title">Other A</span>
  <span class="id">#2</span>
</li><li class="card card--mini" data-action="switchDetailTo" data-task-id="3" title="Other B">
  
  <span class="title">Other B</span>
  <span class="id">#3</span>
</li></ul></div></body></html>"
`;

exports[`render snapshots — canonical Detail Mode states (#31) > Detail without description, with running sessions (#47) 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"></head><body><style>
:root {
  --tk-bg: #f5f1ea;
  --tk-card-bg: #faf7f1;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #efeae1;
  --tk-card-bg-closed: #ece7dd;
  --tk-stroke: #d8d1c2;
  --tk-stroke-muted: #e6e0d2;
  --tk-accent: #d97a32;
  --tk-accent-soft: rgba(217, 122, 50, 0.45);
  --tk-fg: #2a2622;
  --tk-fg-muted: #6b6358;
  --tk-shadow-active: 0 1px 2px rgba(40, 32, 20, 0.08), 0 2px 6px rgba(40, 32, 20, 0.06);
  --tk-description-bg: #efeae1;

  --tk-radius-card: 5px;
  --tk-stroke-width: 1px;
  --tk-pad-card: 4px;
  --tk-gap-card: 3px;

  --tk-dur-hover: 120ms;
  --tk-dur-active: 150ms;
  --tk-dur-detail: 180ms;
  --tk-ease: ease-out;
}

[data-theme="dark"] {
  --tk-bg: #1a1f26;
  --tk-card-bg: #232a33;
  --tk-card-bg-active: #2c3540;
  --tk-card-bg-hover: #2a323c;
  --tk-card-bg-closed: #1f242b;
  --tk-stroke: #38424f;
  --tk-stroke-muted: #2a323c;
  --tk-accent: #4ec0d8;
  --tk-accent-soft: rgba(78, 192, 216, 0.40);
  --tk-fg: #e6ecf2;
  --tk-fg-muted: #93a1b3;
  --tk-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.40), 0 2px 6px rgba(0, 0, 0, 0.30);
  --tk-description-bg: #1d232b;
}

[data-theme="hc-dark"] {
  --tk-bg: #000000;
  --tk-card-bg: #000000;
  --tk-card-bg-active: #000000;
  --tk-card-bg-hover: #0a0a0a;
  --tk-card-bg-closed: #000000;
  --tk-stroke: var(--vscode-contrastBorder, #ffffff);
  --tk-stroke-muted: var(--vscode-contrastBorder, #ffffff);
  --tk-accent: #00e5ff;
  --tk-accent-soft: #00e5ff;
  --tk-fg: #ffffff;
  --tk-fg-muted: #ffffff;
  --tk-shadow-active: none;
  --tk-description-bg: #000000;
}

[data-theme="hc-light"] {
  --tk-bg: #ffffff;
  --tk-card-bg: #ffffff;
  --tk-card-bg-active: #ffffff;
  --tk-card-bg-hover: #f4f4f4;
  --tk-card-bg-closed: #ffffff;
  --tk-stroke: var(--vscode-contrastBorder, #000000);
  --tk-stroke-muted: var(--vscode-contrastBorder, #000000);
  --tk-accent: #b34700;
  --tk-accent-soft: #b34700;
  --tk-fg: #000000;
  --tk-fg-muted: #000000;
  --tk-shadow-active: none;
  --tk-description-bg: #ffffff;
}

@media (prefers-reduced-motion: reduce) {
  :root {
    --tk-dur-hover: 0ms;
    --tk-dur-active: 0ms;
    --tk-dur-detail: 0ms;
  }
}

  html, body { height: 100%; }
  body {
    color: var(--tk-fg);
    background: var(--tk-bg);
    font-family: var(--vscode-font-family);
    font-size: var(--vscode-font-size);
    margin: 0;
    padding: 0;
  }
  /* The webview host sets #root.innerHTML = body contents. So #root — not
     body — is the flex parent for the rendered tree. Making it a column
     flex container of full viewport height lets Detail Mode's card grow
     while the footer hugs the bottom. */
  #root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    box-sizing: border-box;
  }
  .tackle-empty { padding: 12px; color: var(--tk-fg-muted); }
  .card-list { list-style: none; margin: 0; padding: 0; }

  /* Idle Task Card primitive (#45):
     rounded 5 px corners, 1 px stroke, --tk-card-bg fill,
     4 px padding, 3 px gap. */
  .card {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--tk-gap-card);
    padding: var(--tk-pad-card);
    margin: var(--tk-pad-card);
    background: var(--tk-card-bg);
    border: var(--tk-stroke-width) solid var(--tk-stroke);
    border-radius: var(--tk-radius-card);
    cursor: pointer;
    color: var(--tk-fg);
    transition:
      background-color var(--tk-dur-hover) var(--tk-ease),
      transform var(--tk-dur-active) var(--tk-ease),
      box-shadow var(--tk-dur-active) var(--tk-ease),
      border-color var(--tk-dur-active) var(--tk-ease);
  }
  /* Hover: subtle bg tint, no lift. (#46) */
  .card:hover, .card.card--hover {
    background: var(--tk-card-bg-hover);
  }
  /* Active card (#46): lift + shadow + accent stroke + fill bump. */
  .card.card--active {
    transform: translateY(-1px);
    box-shadow: var(--tk-shadow-active);
    border-color: var(--tk-accent);
    background: var(--tk-card-bg-active);
  }
  /* Closed Folder rows (#46): sunken treatment, no stroke, inset shadow,
     reduced glyph/meta opacity. Rendered as .closed-row.card--closed. */
  .card--closed {
    background: var(--tk-card-bg-closed);
    border: none;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
  }
  .card--closed .glyph, .card--closed .id, .card--closed .date {
    opacity: 0.6;
  }

  /* Edge Bar (#46): inset 1 px from card stroke so the rounded corner does
     not clip a hard 3 px rectangle. Sits at the left edge of card padding. */
  .edge-bar {
    position: absolute;
    left: 1px;
    top: 1px;
    bottom: 1px;
    width: 3px;
    border-radius: 2px;
    pointer-events: none;
  }
  .edge-bar--soft { background: var(--tk-accent-soft); }
  .edge-bar--solid { background: var(--tk-accent); }
  .edge-bar--off { display: none; }

  @media (prefers-reduced-motion: reduce) {
    .card { transition: none; }
  }
  .card .line { display: flex; align-items: center; gap: var(--tk-gap-card); min-height: 18px; }
  .card .line1 .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; cursor: pointer; }
  .card .line1 .activate, .card .line1 .overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 4px; }
  .card .ext-icon { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .id { color: var(--tk-fg-muted); }
  .card .parent { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .rollup { color: var(--tk-fg-muted); }
  .card .branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .card .new-session { color: var(--tk-accent); cursor: pointer; }

  /* Session Row primitive (#47).
     Surface variants:
       .session-row              — list-expanded (default). Action buttons
                                   are always visible.
       .session-row--detail      — Detail Mode. Action buttons are hidden by
                                   default and fade in on row hover (120 ms
                                   ease-out per visual identity §6).
     Inside Detail Mode the row is a pill: 12 px radius, full-width, 4x10
     padding. */
  .session-rows { padding: 0 10px 6px 24px; }
  .session-row { display: flex; align-items: center; gap: 6px; padding: 3px 4px; cursor: pointer; }
  .session-row .label { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .session-row .icon-btn { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 0 3px; }
  .session-divider { height: 1px; background: var(--tk-stroke-muted); margin: 4px 0; opacity: 0.6; }

  /* Detail Mode session row pill (#47). */
  .session-row--detail {
    border-radius: 12px;
    width: 100%;
    padding: 4px 10px;
    box-sizing: border-box;
  }
  /* Hide actions by default in Detail Mode; fade in on row hover. */
  .session-row--detail .icon-btn {
    opacity: 0;
    transition: opacity var(--tk-dur-hover) var(--tk-ease);
  }
  .session-row--detail:hover .icon-btn,
  .session-row--detail:focus-within .icon-btn {
    opacity: 1;
  }
  @media (prefers-reduced-motion: reduce) {
    .session-row--detail .icon-btn { transition: none; }
  }

  .list-header { padding: 6px 12px; color: var(--tk-fg-muted); font-size: 0.9em; display: flex; align-items: center; gap: 8px; }
  .list-header .header-counts { flex: 1 1 auto; }
  .header-activate {
    background: var(--tk-accent);
    color: var(--tk-bg);
    border: none;
    border-radius: 4px;
    padding: 3px 10px;
    font-size: 0.9em;
    font-weight: 600;
    cursor: pointer;
  }
  .header-activate:hover { filter: brightness(1.05); }
  .header-activate:focus-visible { outline: 2px solid var(--tk-accent); outline-offset: 2px; }
  .closed-folder { padding: 6px 12px; cursor: pointer; color: var(--tk-fg-muted); user-select: none; }
  .closed-rows { padding: 0 12px 6px 24px; }
  .closed-row { display: flex; align-items: center; gap: 6px; padding: 2px 4px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: var(--tk-fg); }
  .closed-row .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; }
  .closed-row .id { color: var(--tk-fg-muted); }
  .closed-row .date { color: var(--tk-fg-muted); font-size: 0.85em; }

  /* Detail Mode (#47): the entire surface is one expanded Active card.
     Sections are separated by whitespace ONLY — no internal border or
     border-top rules.

     Layout: the card grows to fill the viewport so the description can
     take as much room as it needs, while the footer (rendered as a
     sibling) hugs the bottom. */
  .tackle-detail {
    /* Override card defaults that don't make sense for the full-surface card. */
    margin: 8px;
    padding: 10px 12px;
    gap: 6px;
    box-sizing: border-box;
    cursor: default;
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }
  .detail-header { display: flex; align-items: center; gap: 6px; }
  .detail-back { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-title { flex: 1 1 auto; font-weight: bold; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .detail-overflow { background: transparent; color: var(--tk-fg); border: none; cursor: pointer; padding: 2px 6px; }
  .detail-breadcrumb { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-identity { display: flex; gap: 6px; align-items: center; color: var(--tk-fg-muted); font-size: 0.9em; }
  .detail-branch { color: var(--tk-fg-muted); font-size: 0.85em; }
  .detail-branch-empty { color: var(--tk-fg-muted); font-style: italic; opacity: 0.8; }
  .detail-closed-indicator { color: var(--tk-fg-muted); font-style: italic; font-size: 0.85em; }

  /* Description area (#47): inset surface inside the Detail card.
     8 px x 10 px padding, 4 px radius. Flexes to take the remaining
     height inside the detail card so the user gets the biggest possible
     reading area; scrolls internally when content overflows. */
  .detail-description {
    background: var(--tk-description-bg);
    padding: 8px 10px;
    border-radius: 4px;
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
  }
  .detail-description img { max-width: 100%; height: auto; }
  .detail-description pre { overflow-x: auto; }

  .detail-sessions { display: flex; flex-direction: column; gap: 4px; }
  .detail-sessions-header { display: flex; align-items: center; gap: 6px; }
  .detail-sessions-add { background: transparent; color: var(--tk-accent); border: none; cursor: pointer; padding: 0 4px; font-size: 1.1em; }
  .detail-sessions-empty { color: var(--tk-fg-muted); padding: 4px; font-size: 0.9em; }

  /* Section micro-labels (#47): 11 px / weight 600 per visual identity §4. */
  .section-micro-label {
    flex: 1 1 auto;
    font-size: 11px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.04em;
    color: var(--tk-fg-muted);
  }

  /* Task Footer (#47): vertical list of 1-line mini-cards using the .card
     primitive plus the .card--mini modifier. Renders OUTSIDE the detail
     card on the plain sidebar background. Pinned to the bottom of the
     viewport by the #root flex column — the detail card above it grows
     to fill remaining space. */
  .detail-footer { margin-top: 6px; flex: 0 0 auto; }
  .detail-footer-list { list-style: none; margin: 0; padding: 0; max-height: calc(5 * 28px); overflow-y: auto; }
  .card--mini {
    flex-direction: row;
    align-items: center;
    height: 24px;
    padding: 0 8px;
    margin: 2px 8px;
    gap: 6px;
  }
  .card--mini .title { flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
  .card--mini .id { color: var(--tk-fg-muted); font-size: 0.85em; }
</style><div class="tackle-detail card card--active">
  <div class="detail-header">
    <button class="detail-back" data-action="exitDetail" title="Back">◀ Back</button>
    <span class="detail-title">Running detail</span>
    <button class="detail-overflow" title="More" data-action="taskOverflow" data-task-id="1">⋯</button>
  </div>
  
  <div class="detail-identity">
    <span class="ext-icon">GH</span>
    <span class="id">#9</span>
    <span class="status">open</span>
    
  </div>
  <div class="detail-branch detail-branch-empty">🌿 no worktree yet</div>
  
  <div class="detail-description"></div>
  <div class="detail-sessions">
    <div class="detail-sessions-header">
      <span class="detail-sessions-label section-micro-label">Sessions</span>
      <button class="detail-sessions-add" title="New Session" data-action="newSession" data-task-id="1">+</button>
    </div>
    <div class="detail-sessions-body"><div class="session-row session-row--detail" data-action="focusSession" data-session-id="10">
  <span class="kind">⌨️</span>
  <span class="label">impl</span>
  <span class="glyph">⏳</span>
  <button class="icon-btn stop" title="Stop" data-action="stopSession" data-session-id="10">⏹</button>
  <button class="icon-btn done" title="Mark Done" data-action="markSessionDone" data-session-id="10">✓</button>
  <button class="icon-btn overflow" title="More" data-action="sessionOverflow" data-session-id="10">⋯</button>
</div></div>
  </div>
</div></body></html>"
`;
